<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <!-- views hijos -->
    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblNombre"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/hintNombre"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lblCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblCantidad"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/txtCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintCantidad"
            android:inputType="number"
            android:textColorHint="#8D6E63"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/lblPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblPrecio"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:ignore="VisualLintBounds" />

        <EditText
            android:id="@+id/txtPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintPrecio"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/bnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@mipmap/ic_launcher"
            android:text="@string/btnSave"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </FrameLayout>
</LinearLayout>